greeting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  name: hello-port
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: welcome
                port:
                  name: welcome-port
